--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "src/server.js",
   "type": "commonjs",
   "scripts": {
+    "build": "cd ../frontend && npm install && npm run build",
     "start": "node src/server.js",
     "dev": "nodemon src/server.js"
   },
